--- a/.github/workflows/nix-github-actions.yml
+++ b/.github/workflows/nix-github-actions.yml
@@ -19,7 +19,7 @@ jobs:
           github_access_token: ${{ secrets.GITHUB_TOKEN }}
       - uses: cachix/cachix-action@v15
         with:
-          name: adisbladis
+          name: pyproject-nix
           authToken: '${{ secrets.CACHIX_AUTH_TOKEN }}'
       - id: set-matrix
         name: Generate Nix Matrix
@@ -40,7 +40,7 @@ jobs:
           github_access_token: ${{ secrets.GITHUB_TOKEN }}
       - uses: cachix/cachix-action@v15
         with:
-          name: adisbladis
+          name: pyproject-nix
           authToken: '${{ secrets.CACHIX_AUTH_TOKEN }}'
       - run: nix build -L ".#${{ matrix.attr }}"
 
