Add plux build system

--- a/build-systems.toml
+++ b/build-systems.toml
@@ -109,6 +109,9 @@ poetry-core = []
 setuptools = []
 setuptools-scm = []
 
+[plux]
+setuptools = []
+
 [poetry-dynamic-versioning]
 poetry-core = []
 
