--- a/.mergify.yml
+++ b/.mergify.yml
@@ -1,7 +1,7 @@
 pull_request_rules:
   - name: automatic merge for Renovate pull requests
     conditions:
-      - author=renovate[bot]
+      - author=renovate
       - check-success=collect
     actions:
       merge:
