--- a/build-systems.toml
+++ b/build-systems.toml
@@ -123,7 +123,7 @@ flit-core = []
 setuptools = []
 
 [pip]
-setuptools = []
+flit-core = []
 
 [pkgconfig]
 poetry-core = []
@@ -137,7 +137,8 @@ setuptools = []
 setuptools-scm = []
 
 [plux]
-setuptools = []
+hatchling = []
+hatch-vcs = []
 
 [poetry-dynamic-versioning]
 poetry-core = []
